refactor of api
