# server/routes/get-account.go
@@ -17,38 +17,40 @@ type uResponse struct {
 // @Summary GetAccount
 // @Schemes
 // @Description Get Account information from the Sonr Blockchain. This is a read-only endpoint.
-// @Tags object
+// @Tags account
 // @Produce json
 // @Success 200 {object} uResponse
-// @Failure      500  {string}  message
+// @Failure      500  {object} FailedResponse
 // @Router /account/info [get]
 func (ns *NebulaServer) GetAccount(c *gin.Context) {
 	m := binding.CreateInstance()
 	if m == nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": "Motor Instance failed",
+		c.JSON(http.StatusInternalServerError, FailedResponse{
+			Error: "Failed to create binding instance",
 		})
 		return
 	}
 
 	addr, err := m.GetAddress()
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"Address Error: ": "Failed to get address from motor binding instance",
+		c.JSON(http.StatusInternalServerError, FailedResponse{
+			Error: "Failed to get address",
 		})
 		return
 	}
 
 	didDocument, err := m.GetDidDocument()
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"DIDDocument Error: ": "Failed to get DIDDocument from motor binding instance",
+		c.JSON(http.StatusInternalServerError, FailedResponse{
+			Error: "Failed to get DID document",
 		})
 		return
 	}
+
 	res := uResponse{
 		Address:     addr,
 		DidDocument: *didDocument,
 	}
+
 	c.JSON(http.StatusOK, res)
 }
