# server/routes/get-schema.go
@@ -7,6 +7,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/sonr-io/sonr/x/schema/types"
 	"github.com/sonr-io/speedway/internal/binding"
 	"github.com/sonr-io/speedway/internal/utils"
 )
@@ -14,6 +15,10 @@ import (
 type QuerySchema struct {
 	Creator string `json:"creator"`
 	Schema  string `json:"schema"`
+}
+
+type QuerySchemaResponse struct {
+	Definition *types.SchemaDefinition `json:"definition"`
 }
 
 // @BasePath /api/v1
@@ -24,16 +29,16 @@ type QuerySchema struct {
 // @Produce json
 // @Param creator query string true "Creator"
 // @Param schema query string true "Schema"
-// @Success      200  {object} types.SchemaDefinition
-// @Failure      500  {string} message error
+// @Success      200  {object} QuerySchemaResponse
+// @Failure      500  {object} FailedResponse
 // @Router /schema/get [post]
 func (ns *NebulaServer) QuerySchema(c *gin.Context) {
 	rBody := c.Request.Body
 	var r QuerySchema
 	err := json.NewDecoder(rBody).Decode(&r)
 	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"error": "Invalid Request Body",
+		c.JSON(http.StatusBadRequest, FailedResponse{
+			Error: "Invalid Request Body",
 		})
 		return
 	}
@@ -51,11 +56,14 @@ func (ns *NebulaServer) QuerySchema(c *gin.Context) {
 	definition, err := utils.ResolveIPFS(schema.WhatIs.Schema.Cid)
 	if err != nil {
 		fmt.Printf("ResolveIPFS failed %v\n", err)
-		c.JSON(http.StatusInternalServerError, gin.H{
-			"error": "Error resolving IPFS",
+		c.JSON(http.StatusInternalServerError, FailedResponse{
+			Error: "Resolve IPFS failed",
 		})
 		return
 	}
 
-	c.JSON(http.StatusOK, definition)
+	c.JSON(http.StatusOK,
+		QuerySchemaResponse{
+			Definition: &definition,
+		})
 }
